# defensive-actions-expected

./: .gitignore  IMPLEMENTATION.md  PIPELINE_STATUS.md  README.md  build_comprehensive_notebooks.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: analysis.yaml  competitions.yaml  models.yaml  pipeline.yaml
docs/: BASELINE_MODELING_STRATEGY.md  MODELING_PROGRESS.md  MODELING_QUICK_REFERENCE.md  README.md  implementation_plan.md  limitations_and_next_steps.md  notebook_findings_summary.md  player_defense_model.md  portfolio_story.md  project_overview.md  project_roadmap.md  project_scope.md
docs/analysis/: COUNTER_ATTACK_EXPLANATION.md  README.md  XT_BASED_TARGET_ANALYSIS.md  ZONE_ANALYSIS.md  analysis_workflow.md  baseline_model_results.md  chart_catalogue.md  clustering_methodology.md  descriptive_signal_framework.md  feature_analysis.md  limitations.md  player_aggregation.md  processed_data_analysis.md
notebooks/: 01_data_audit.ipynb  05_stage_level_defensive_dynamics.ipynb  README.md
outputs/: README.md
scripts/: analyze_features.py  analyze_processed_data.py  audit_model_data.py  build_descriptive_signals.py  build_features.py  build_oof_player_signals.py  build_player_summary.py  build_provisional_player_signals.py  check_feature_dataset.py  compare_models.py  generate_analysis_report.py  generate_model_report.py  generate_reports.py  pipeline.py  run_pipeline.py  run_player_clustering.py  train_models.py  train_two_part_xg.py  validate.py  validate_models.py
tests/: conftest.py  test_analysis_layer.py  test_attacking_threat.py  test_baseline_logistic.py  test_build_provisional_player_signals.py  test_cli_execution.py  test_cli_smoke.py  test_coach_analysis.py  test_end_to_end_fixture.py  test_event_context_semantics.py  test_methodology_invariants.py  test_mlflow_tracking.py  test_model_framework_phase.py  test_model_spec_schema.py  test_model_workflow_production_fixture.py  test_phase_segmentation.py  test_pipeline.py  test_player_defense_geometry.py  test_short_horizon_targets.py  test_train_two_part_xg_cli.py  test_two_part_xg.py
(+356 files in other folders)
