[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defensive-actions-expected"
version = "0.1.0"
description = "MVP pipeline for Defensive Actions Expected (DAx)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DAx Project" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

