[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defensive-actions-expected"
version = "0.1.0"
description = "MVP pipeline for Defensive Actions Expected (DAx)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DAx Project" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "matplotlib>=3.8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
