[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defensive-actions-expected"
version = "0.1.0"
description = "MVP pipeline for Defensive Actions Expected (DAx)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DAx Project" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "statsbombpy>=1.0.3",
  "pyarrow>=15.0",
  "tqdm>=4.66",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
notebooks = ["jupyter", "ipykernel", "seaborn", "mplsoccer"]
visualization = ["matplotlib", "seaborn", "mplsoccer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402", "E701", "E702", "E712", "F401", "F541", "I001"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
